--- a/src/client/components/Header/Header.css
+++ b/src/client/components/Header/Header.css
@@ -6,7 +6,7 @@
     top: 0px;
     width: 100%;
     display: grid;
-    grid-template-columns: 5% 10% auto 15% 15%;
+    grid-template-columns: 5% 10% auto 12% 12% 5%;
     grid-template-rows: auto;
 }
 
@@ -34,7 +34,7 @@
 
 .header__grid-item-sign-up {
     grid-column-start: 5;
-    grid-column-end: auto;
+    grid-column-end: 6;
     grid-row-start: one;
     grid-row-end: auto;
 }
@@ -60,19 +60,44 @@
 
 }
 
-.header__nav-item {
-    font-weight: bold;
-    color: #000;
-    font-size: 16px;
+.header__nav-item-logo {
     text-decoration: none;
+    background: #F8C542;
+    box-shadow: 0px 1.83019px 1.83019px rgba(0, 0, 0, 0.25);
+    border-radius: 19.217px;
+    font-family: Montserrat, sans-serif;
+    font-style: normal;
+    font-weight: bold;
     text-transform: uppercase;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+    color: #1A3B70;
+}
 
-    &:hover {
-        color: #aaa;
-     }
+.header__nav-item-sign-in {
+    text-decoration: none;
+    border-radius: 19.217px;
+    font-family: Montserrat, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 16px;
+    line-height: 20px;
+    color: #1A3B70;
+    padding: 1.2vmin 3.5vmin;
+}
 
-    &_active {
-        color: #aaa;
-    }
+.header__nav-item-sign-up {
+    text-decoration: none;
+    background: #F8C542;
+    box-shadow: 0px 1.83019px 1.83019px rgba(0, 0, 0, 0.25);
+    border-radius: 19.217px;
+    font-family: Montserrat, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 16px;
+    line-height: 20px;
+    color: #1A3B70;
+    padding: 1.2vmin 3.5vmin;
 }
