--- a/src/client/components/Footer/Footer.css
+++ b/src/client/components/Footer/Footer.css
@@ -1,4 +1,11 @@
 .footer {
-  padding: 50px;
-  text-align: center;
+    width: 100%;
+    height: 10vmin;
+    bottom: 0;
+    position: absolute;
+    text-align: center;
+}
+
+.footer__div {
+    display: inline-block;
 }
