--- a/src/client/components/Header/Header.css
+++ b/src/client/components/Header/Header.css
@@ -3,7 +3,7 @@
 .header__gridbox {
     height: 20vmin;
     position: absolute;
-    top: 0px;
+    top: 0;
     width: 100%;
     display: grid;
     grid-template-columns: 5% 10% auto 12% 12% 5%;
@@ -64,40 +64,31 @@
     text-decoration: none;
     background: #F8C542;
     box-shadow: 0px 1.83019px 1.83019px rgba(0, 0, 0, 0.25);
-    border-radius: 19.217px;
-    font-family: Montserrat, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 16px;
-    line-height: 20px;
-    color: #1A3B70;
+    border-radius: 20px;
 }
 
 .header__nav-item-sign-in {
     text-decoration: none;
-    border-radius: 19.217px;
+    border-radius: 20px;
     font-family: Montserrat, sans-serif;
     font-style: normal;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 16px;
-    line-height: 20px;
+    font-size: 2.2vmin;
     color: #1A3B70;
-    padding: 1.2vmin 3.5vmin;
+    padding: 1.5vmin 4.5vmin;
 }
 
 .header__nav-item-sign-up {
     text-decoration: none;
     background: #F8C542;
     box-shadow: 0px 1.83019px 1.83019px rgba(0, 0, 0, 0.25);
-    border-radius: 19.217px;
+    border-radius: 20px;
     font-family: Montserrat, sans-serif;
     font-style: normal;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 16px;
-    line-height: 20px;
+    font-size: 2.2vmin;
     color: #1A3B70;
-    padding: 1.2vmin 3.5vmin;
+    padding: 1.5vmin 4.5vmin;
 }
