--- a/src/client/components/Header/Header.css
+++ b/src/client/components/Header/Header.css
@@ -1,42 +1,118 @@
-@import '~styles/media.css';
+@import '../../styles/media.css';
 
-.header__gridbox {
-    height: 20vmin;
-    position: absolute;
+.header {
     top: 0;
     width: 100%;
+    height: 20vmin;
+    position: absolute;
+}
+
+.header__flex-box {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header__flex-item {
+    width: 100%;
+}
+
+.header__grid-box
+{
     display: grid;
-    grid-template-columns: 5% 10% auto 12% 12% 5%;
-    grid-template-rows: auto;
+    &_type
+    {
+        &_authorized
+        {
+            grid-template-columns: 5% 10% auto 12% 12% 12% 5%;
+            grid-template-rows: auto;
+        }
+
+        &_non-authorized
+        {
+            grid-template-columns: 5% 10% auto 12% 12% 5%;
+            grid-template-rows: auto;
+        }
+    }
 }
 
 .header__grid-item-logo {
-    grid-column-start: 2;
-    grid-column-end: 3;
     grid-row-start: one;
     grid-row-end: auto;
     text-align: center;
+    &_type
+    {
+        &_authorized
+        {
+            grid-column-start: 2;
+            grid-column-end: 3;
+        }
+
+        &_non-authorized
+        {
+            grid-column-start: 2;
+            grid-column-end: 3;
+        }
+    }
 }
 
 .header__grid-item-space {
-    grid-column-start: 3;
-    grid-column-end: 4;
     grid-row-start: one;
     grid-row-end: auto;
+    &_type
+    {
+        &_authorized
+        {
+            grid-column-start: 3;
+            grid-column-end: 4;
+        }
+
+        &_non-authorized
+        {
+            grid-column-start: 3;
+            grid-column-end: 4;
+        }
+    }
 }
 
 .header__grid-item-sign-in {
-    grid-column-start: 4;
-    grid-column-end: 5;
     grid-row-start: one;
     grid-row-end: auto;
+    &_type
+    {
+        &_authorized
+        {
+            grid-column-start: 4;
+            grid-column-end: 5;
+        }
+
+        &_non-authorized
+        {
+            grid-column-start: 4;
+            grid-column-end: 5;
+        }
+    }
 }
 
 .header__grid-item-sign-up {
-    grid-column-start: 5;
-    grid-column-end: 6;
     grid-row-start: one;
     grid-row-end: auto;
+    &_type
+    {
+        &_authorized
+        {
+            grid-column-start: 5;
+            grid-column-end: 6;
+        }
+
+        &_non-authorized
+        {
+            grid-column-start: 5;
+            grid-column-end: 6;
+        }
+    }
 }
 
 .header__grid-item {
@@ -75,7 +151,7 @@
     font-weight: bold;
     text-transform: uppercase;
     font-size: 2.2vmin;
-    color: #1A3B70;
+    color: $font-color;
     padding: 1.5vmin 4.5vmin;
 }
 
@@ -89,6 +165,6 @@
     font-weight: bold;
     text-transform: uppercase;
     font-size: 2.2vmin;
-    color: #1A3B70;
+    color: $font-color;
     padding: 1.5vmin 4.5vmin;
 }
