--- a/src/client/components/App/App.css
+++ b/src/client/components/App/App.css
@@ -1,12 +1,11 @@
-@import '~styles/base.css';
+@import '../../styles/base.css';
 
 .app {
     width: 100%;
+    height: 100%;
     color: #000;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
-
     display: flex;
-
     flex-direction: column;
     flex: 1 1;
 }
