--- a/src/client/components/Header/Header.css
+++ b/src/client/components/Header/Header.css
@@ -1,6 +1,14 @@
 @import '../../styles/media.css';
+@import '../../styles/constants.css';
 
 .header {
+    top: 0;
+    width: 100%;
+    height: 20vmin;
+    position: absolute;
+}
+
+.header__container {
     top: 0;
     width: 100%;
     height: 20vmin;
@@ -26,7 +34,7 @@
     {
         &_authorized
         {
-            grid-template-columns: 5% 10% auto 12% 12% 12% 5%;
+            grid-template-columns: 5% 10% auto 13.5% 13.5% 13.5% 5%;
             grid-template-rows: auto;
             grid-auto-rows: 100%;
         }
@@ -57,15 +65,16 @@
     }
     &_button
     {
+        width: 100%;
         border-radius: 20px;
         color: $font-color;
-        font-size: 2.2vmin;
+        font-size: 2.05vmin;
         font-weight: bold;
         font-style: normal;
         font-family: $font-family;
         text-transform: uppercase;
         text-decoration: none;
-        padding: 1.5vmin 4.5vmin;
+        padding: 1.5vmin 3.25vmin;
     }
     &_logo
     {
