--- a/src/client/components/Layout/Container/Vertical/ContainerVerticalAligned.css
+++ b/src/client/components/Layout/Container/Vertical/ContainerVerticalAligned.css
@@ -1,14 +1,11 @@
 .container-vertical-aligned
 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
     width: 100%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    height: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    text-align: center;
     &_type
     {
         &_default
