--- a/src/client/pages/Authentication/components/Form/Form.css
+++ b/src/client/pages/Authentication/components/Form/Form.css
@@ -1,33 +1,38 @@
-.authentication-page-form__grid-item {
-    width: 80%;
+@import '../../../../styles/constants.css';
+
+.authentication-form__flex-box {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
-.authentication-page-form__input {
+.authentication-form__flex-item {
     width: 100%;
-    background: #d1f7ff;
-    border-radius: 10px;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
 
-    font-family: Montserrat, sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 18px;
+.authentication-form__input,
+.authentication-form__button {
+    width: 100%;
     padding: 12px;
+    border-radius: 10px;
+    color: $font-color;
+    font-family: $font-family;
+    font-size: 2.35vmin;
+    font-weight: 600;
+    font-style: normal;
+}
 
+.authentication-form__input {
+    background: #d1f7ff;
     color: rgba(0, 0, 0, 0.47);
 }
 
-.authentication-page-form__button {
-    width: 100%;
+.authentication-form__button {
     background: #f4900c;
-    border-radius: 10px;
-    font-family: Montserrat, sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 18px;
-    padding: 12px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-
-    color: #1a3b70;
 }
