--- a/src/client/pages/Authentication/components/Title/Title.css
+++ b/src/client/pages/Authentication/components/Title/Title.css
@@ -1,12 +1,14 @@
-.authentication-page-title__div-title {
-    font-family: Montserrat;
+@import '../../../../styles/constants.css';
+
+.authentication-title__container {
+    width: 100%;
+}
+
+.authentication-title__span {
+    width: 100%;
     font-style: normal;
     font-weight: 600;
-    font-size: 24px;
-    line-height: 24px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-
-    color: #1a3b70;
+    font-size: 4vmin;
+    font-family: $font-family;
+    color: $font-color;
 }
