--- a/src/client/pages/Authentication/components/Tabs/Tabs.css
+++ b/src/client/pages/Authentication/components/Tabs/Tabs.css
@@ -1,6 +1,7 @@
-@import '~styles/constants.css';
+@import '../../../../styles/constants.css';
 
 .authentication-tabs__tab {
+    width: auto;
 }
 
 .authentication-tabs__tab-item {
