--- a/src/client/styles/constants.css
+++ b/src/client/styles/constants.css
@@ -1,4 +1,2 @@
-@use postcss-simple-vars;
-
-$font-color: #1A3B70;
-$font-family: Montserrat, sans-serif;
+$font-color: #1a3b70;
+$font-family: montserrat, sans-serif;
