--- a/src/client/components/Layout/Container/Vertical/ContainerVerticalAligned.css
+++ b/src/client/components/Layout/Container/Vertical/ContainerVerticalAligned.css
@@ -1,16 +1,14 @@
-.container-vertical-aligned
-{
+.container-vertical-aligned {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    &_type
-    {
-        &_default
-        {
-            background: none;
-        }
-    }
+
+&_type {
+&_default {
+    background: none;
+}
+}
 }
