--- a/src/client/styles/base.css
+++ b/src/client/styles/base.css
@@ -1,20 +1,21 @@
-html, body, #mount {
-  padding: 0;
-  margin: 0;
-
-  display: flex;
-  width: 100%;
-  min-height: 100%;
+html,
+body,
+#mount {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    width: 100%;
+    min-height: 100%;
 }
 
 html {
-  overflow-y: scroll;
+    overflow-y: scroll;
 }
 
 a {
     color: #777;
 
-    &:hover {
-        color: #ff5c28;
-    }
+&:hover {
+    color: #ff5c28;
+}
 }
