--- a/src/client/components/Navbar/Navbar.css
+++ b/src/client/components/Navbar/Navbar.css
@@ -1,21 +1,21 @@
-@import '../../../styles/media.css';
-@import '../../../styles/constants.css';
+@import '../../styles/media.css';
+@import '../../styles/constants.css';
 
-.header {
+.navbar {
     top: 0;
     width: 100%;
     height: 20vmin;
     position: absolute;
 }
 
-.header__container {
+.navbar__container {
     top: 0;
     width: 100%;
     height: 20vmin;
     position: absolute;
 }
 
-.header__flex-box {
+.navbar__flex-box {
     width: 100%;
     height: 100%;
     display: flex;
@@ -23,11 +23,11 @@
     align-items: center;
 }
 
-.header__flex-item {
+.navbar__flex-item {
     width: 100%;
 }
 
-.header__grid-box {
+.navbar__grid-box {
     display: grid;
 
     &_type {
@@ -45,14 +45,14 @@
     }
 }
 
-.header__grid-item {
+.navbar__grid-item {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto;
 }
 
-.header__nav-item-link {
+.navbar__nav-item-link {
     text-decoration: none;
     border-radius: 20px;
 
@@ -78,7 +78,7 @@
         width: 11.5vmin;
         height: 11.5vmin;
         align-self: center;
-        background-image: url("../../../../../static/assets/logo.svg");
+        background-image: url("../../../../static/assets/logo.svg");
         background-repeat: no-repeat;
         background-size: 100% auto;
         background-position: center;
