--- a/src/client/pages/Playground/Playground.css
+++ b/src/client/pages/Playground/Playground.css
@@ -1,3 +1,12 @@
-.playground__span {
+.playground__flex-box {
     width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.playground__flex-item {
+    width: 100%;
+    margin: auto;
 }
