--- a/src/client/components/Page/Body/Body.css
+++ b/src/client/components/Page/Body/Body.css
@@ -55,6 +55,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    &_active {
+        background: #ffd569;
+    }
 }
 
 .page-body__item-span {
