--- a/src/client/components/Page/Footer/Footer.css
+++ b/src/client/components/Page/Footer/Footer.css
@@ -37,7 +37,7 @@
     display: flex;
     align-items: center;
     text-align: center;
-    color: #bebcbc;
+    color: #f5f5f5;
 
     &_disabled {
         opacity: 1;
