[Playground::title]: Implemented the title body structure.

--- a/src/client/components/Page/Body/BodyItems/BodyItems.css
+++ b/src/client/components/Page/Body/BodyItems/BodyItems.css
@@ -1,4 +1,4 @@
-@import "../../../styles/constants.css";
+@import "src/client/styles/constants.css";
 
 .page-body__container {
     overflow: scroll;
