--- a/src/client/components/Page/Body/BodyName/BodyName.css
+++ b/src/client/components/Page/Body/BodyName/BodyName.css
@@ -1,39 +1,39 @@
 @import "../../../../styles/constants.css";
 
-.page-body__container {
+.body-name__container {
     margin: auto;
     align-self: center;
     width: 65vmin;
-    height: 40vmin;
+    height: 35vmin;
     padding: 5px;
     background: #F89942;
     border-radius: 30px;
 }
 
-.page-body__grid-box {
+.body-name__grid-box {
     width: 100%;
     height: 100%;
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 20% auto;
+    grid-template-rows: 60% auto;
     grid-auto-columns: auto;
 }
 
-.page-body__grid-item {
+.body-name__grid-item {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
 }
 
-.page-body__flex-box {
+.body-name__flex-box {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
 }
 
-.page-body__flex-item {
+.body-name__flex-item {
     width: 100%;
     height: 100%;
     display: flex;
@@ -41,48 +41,60 @@
     padding: 3px;
 }
 
-.page-body__flex-item:last-child {
+.body-name__flex-item:last-child {
     padding-bottom: 20px;
 }
 
-.page-body__input-container {
+.body-name__input-container {
     width: 80%;
-    height: 5.85vmin;
-    background: #FFF0CA;
+    height: 5.05vmin;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
-
-    &_active {
-        background: #ffd569;
-    }
 }
 
-.page-body__input-field {
+.body-name__input-field {
     width: 100%;
+    height: 100%;
+    padding: 10px 15px;
     font-family: $font-family;
     font-style: normal;
     font-weight: 500;
     font-size: 2.8vmin;
     color: $font-color;
+    background: #EEFCFF;
+    border-radius: 17.1303px;
 }
 
-.page-body__title {
+.body-name__description-flex-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.body-name__description-flex-item {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 4px;
+}
+
+.body-name__description-title {
     font-family: $font-family;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 3.5vmin;
     display: flex;
     align-items: center;
     color: $font-color;
 }
 
-.page-body__description {
+.body-name__description-subtitle {
     font-family: $font-family;
     font-style: normal;
-    font-weight: 500;
-    font-size: 4vmin;
+    font-weight: 400;
+    font-size: 2.5vmin;
     display: flex;
     align-items: center;
     color: $font-color;
