--- a/src/client/pages/Playlists/components/Bar/Search/Search.css
+++ b/src/client/pages/Playlists/components/Bar/Search/Search.css
@@ -1,14 +1,14 @@
 @import "../../../../../styles/constants.css";
 
 .playlists-bar-search__input {
-    width: 100%;
-    height: 100%;
+    width: 90%;
     background: #3395BF;
     border-radius: 12px;
     font-family: $font-family;
-    //font-style: normal;
-    //font-weight: 500;
-    //font-size: 2.75vmin;
-    //text-align: center;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 2.75vmin;
+    text-align: left;
+    padding: 10px 15px;
     color: rgba(255, 255, 255, 0.5);
 }
