--- a/src/client/pages/Playlists/components/Bar/Sort/Sort.css
+++ b/src/client/pages/Playlists/components/Bar/Sort/Sort.css
@@ -1,7 +1,8 @@
 @import '../../../../../styles/constants.css';
 
+
 .playlists-bar-sort__button {
-    width: 100%;
+    width: 90%;
     height: 100%;
     background: #3395BF;
     border-radius: 12px;
@@ -9,13 +10,17 @@
     &_date {
         background: #33BF84;
     }
+
+    &:active {
+        background: #65c3f1;
+    }
 }
 
 .playlists-bar-sort__span {
     font-family: $font-family;
-    //font-style: normal;
-    //font-weight: 500;
-    //font-size: 2.75vmin;
-    //text-align: center;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 2.75vmin;
+    text-align: center;
     color: #FFFFFF;
 }
