--- a/src/client/pages/Playlists/components/Body/Body.css
+++ b/src/client/pages/Playlists/components/Body/Body.css
@@ -1,10 +1,14 @@
 .playlists-body__row {
+    width: 100%;
+    margin: 3.5vmin 0;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
 }
 
 .playlists-body__column {
+    width: 100%;
     display: flex;
-
+    justify-content: center;
+    align-items: center;
 }
