[Playlists::Stub]: Making the loader for the page, awaiting for playlist components.

--- a/src/client/pages/Playlists/components/Bar/Sort/Sort.css
+++ b/src/client/pages/Playlists/components/Bar/Sort/Sort.css
@@ -11,6 +11,11 @@
         background: #33BF84;
     }
 
+    &_disabled {
+        pointer-events: none;
+        background: #97bead;
+    }
+
     &:active {
         background: #65c3f1;
     }
