--- a/src/client/components/Footer/Footer.css
+++ b/src/client/components/Footer/Footer.css
@@ -1,8 +1,8 @@
 .footer__container {
+    position: fixed;
     width: 100%;
     height: 10vmin;
     bottom: 0;
-    position: absolute;
     text-align: center;
 }
 
