--- a/src/client/components/Layout/Container/Container.css
+++ b/src/client/components/Layout/Container/Container.css
@@ -1,16 +1,6 @@
 .container {
-    min-height: 100vh;
-    min-width: 100vw;
+    min-height: 100%;
+    min-width: 100%;
     text-align: center;
     position: relative;
-
-&_type {
-&_default {
-    background: linear-gradient(180deg, #fff 0%, #fff 20.31%, rgba(255, 255, 255, 0) 100%), #d1f7ff;
-}
-
-&_black {
-    background: linear-gradient(180deg, #fff 0%, #fff 20.31%, rgba(255, 255, 255, 0) 100%), #130303;
-}
-}
 }
