[Playground::Layout]: Fixed the layout due to new navbar position.

--- a/src/client/components/App/App.css
+++ b/src/client/components/App/App.css
@@ -38,10 +38,14 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+
+    &_authenticated {
+        display: none !important;
+    }
 }
 
 .app__grid-item:last-child {
     &_authenticated {
-        display: none;
+        display: none !important;
     }
 }
