--- a/src/client/components/Page/Footer/Footer.css
+++ b/src/client/components/Page/Footer/Footer.css
@@ -1,9 +1,10 @@
 @import '../../../styles/constants.css';
 
 .page-footer__container {
-    width: 100%;
-    height: 15vmin;
-    margin: auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .page-footer__button {
