--- a/src/client/pages/Playlists/Playlists.css
+++ b/src/client/pages/Playlists/Playlists.css
@@ -4,7 +4,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .playlists__flex-item {
